fdo#53985 DOCX import: don't try to set empty PageDescName

Regression from 50cb1667020494906afaacb68d4163d1eda527cf.

(cherry picked from commit 8281578b89c3df3fe3452a594f6b21483683638a)

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Change-Id: Ie04d5ad37555ed4cfeb34ccb8dc021675fbd25ea